--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "two.js": "^0.6.0",
     "material-design-lite": "^1.3.0",
     "dialog-polyfill": "^0.4.6",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "turtleshepherd.js": "turtleshepherd#^0.1.3"
   }
 }
