--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "material-design-lite": "^1.3.0",
     "dialog-polyfill": "^0.4.6",
     "jquery": "^3.1.1",
-    "turtleshepherd.js": "turtleshepherd#^0.1.3"
+    "turtleshepherd.js": "turtleshepherd#^0.1.3",
+    "roboto-and-material-icons-fonts": "^1.1.0"
   }
 }
