--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "authors": [
     "Michael Aschauer <m@ash.to>"
   ],
+  "version":"0.0.2",
   "description": "",
   "main": "",
   "license": "GNU AGPL",
