--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "authors": [
     "Michael Aschauer <m@ash.to>"
   ],
-  "version":"0.0.2",
+  "version": "0.1.0",
   "description": "",
   "main": "",
   "license": "GNU AGPL",
@@ -17,14 +17,13 @@
     "tests"
   ],
   "dependencies": {
-    "file-saver": "filesaver#^1.3.3",
     "two.js": "^0.6.0",
     "material-design-lite": "^1.3.0",
     "dialog-polyfill": "^0.4.6",
     "jquery": "^3.1.1",
-    "turtleshepherd.js": "turtleshepherd#^0.1.3",
     "roboto-and-material-icons-fonts": "^1.1.0",
     "hammerjs": "hammer.js#^2.0.8",
-    "jquery-hammerjs": "jquery.hammer.js#^2.0.0"
+    "jquery-hammerjs": "jquery.hammer.js#^2.0.0",
+    "turtleshepherd.js": "turtleshepherd#0.2.2"
   }
 }
